--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.16.2"
   }
 }
