--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,16 @@
   "author": "Orkuma Ivo",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.2"
   }
