--- a/client-react/package.json
+++ b/client-react/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
