--- a/client-react/package.json
+++ b/client-react/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:fix": "npm run lint -- --fix",
+    "lint": "eslint -c .eslintrc --ext .js,.jsx ."
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
   }
