F005-adding-jest-tests: added jest setup and test for account controller

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,7 +1,21 @@
 {
   "extends": "airbnb-base",
+  "env": {
+    "jest/globals": true
+  },
   "rules": {
     "import/prefer-default-export": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error"
+  },
+  "plugins": ["jest"],
+  "settings": {
+    "jest": {
+      "version": 26
+    }
   }
 }
