--- a/client-react/package.json
+++ b/client-react/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint:fix": "npm run lint -- --fix",
     "lint": "eslint -c .eslintrc --ext .js,.jsx ."
@@ -45,10 +45,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^27.5.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "jest": "^27.5.1",
     "postcss": "^8.4.6",
+    "react-test-renderer": "^17.0.2",
+    "regenerator-runtime": "^0.13.9",
     "tailwindcss": "^3.0.23"
   }
 }
